--- a/projects/editor/src/app/form-canvas/form-canvas.component.html
+++ b/projects/editor/src/app/form-canvas/form-canvas.component.html
@@ -38,18 +38,33 @@
 
     <mat-expansion-panel>
       <mat-expansion-panel-header>Layout</mat-expansion-panel-header>
-      
-      <div formGroupName="modes">
-        <h5 class="mat-subtitle">Default</h5>
+        <!-- Current Mode -->
         <mat-form-field>
-          <mat-label>Modes</mat-label>
-          <mat-select formControlName="default" multiple>
-            <mat-option *ngFor="let mode of modes" [value]="mode">
-              {{mode}}
+          <mat-label>Select Mode</mat-label>
+          <mat-select (valueChange)="form.setControl('layout', $event)">
+            <mat-option *ngFor="let layout of layouts | keyvalue" [value]="layout.value">
+              {{ layout.key }}
             </mat-option>
           </mat-select>
         </mat-form-field>
-      </div>
+        <div formGroupName="layout">
+          <!-- Custom form here -->
+        </div>
+    </mat-expansion-panel>
+
+
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>Canvas</mat-expansion-panel-header>
+      
+        <mat-form-field>
+          <mat-label>Min Zoom</mat-label>
+          <input placeholder="0" matInput type="number" formControlName="minZoom" />
+        </mat-form-field>
+        <mat-form-field>
+          <mat-label>Max Zoom</mat-label>
+          <input placeholder="0" matInput type="number" formControlName="maxZoom" />
+        </mat-form-field>
+        <mat-slide-toggle formControlName="autopaint">Autopaint</mat-slide-toggle>
     </mat-expansion-panel>
   </mat-accordion>
 </form>
