--- a/projects/editor/src/app/doc/doc.component.html
+++ b/projects/editor/src/app/doc/doc.component.html
@@ -1,1 +1,15 @@
-<p>doc under construction!</p>
+<mat-sidenav-container>
+  <mat-sidenav opened mode="side">
+    <mat-toolbar>
+      <a mat-icon-button routerLink="..">
+        <mat-icon>arrow_back</mat-icon>
+      </a>
+    </mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="start">Getting Started</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
