--- a/projects/editor/src/app/graph/editor/editor.component.html
+++ b/projects/editor/src/app/graph/editor/editor.component.html
@@ -37,3 +37,7 @@
     </ng-container>
   </mat-sidenav>
 </mat-sidenav-container>
+
+<a class="home" mat-mini-fab routerLink="/">
+  <mat-icon>home</mat-icon>
+</a>
