--- a/projects/editor/src/app/home/home.component.html
+++ b/projects/editor/src/app/home/home.component.html
@@ -1,13 +1,12 @@
 <mat-toolbar fxLayout fxLayoutAlign="space-between center">
   <h2>Angular Antv - G6</h2>
-  <img src="img/github.svg" />
 </mat-toolbar>
 
 <section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="24px">
   <h1 class="mat-display-2">Angular G6</h1>
   <p>Build graph with G6 and Angular</p>
   <div fxLayout fxLayoutAlign="center center">
-    <a class="mat-title" mat-flat-button color="primary">
+    <a class="mat-title" mat-flat-button color="primary" routerLink="doc">
       Getting Started
     </a>
   </div>
@@ -15,7 +14,3 @@
     <a mat-button routerLink="graph">Graph Editor</a>
   </div>
 </section>
-
-<footer>
-
-</footer>
