--- a/projects/editor/src/app/graph/editor/editor.component.scss
+++ b/projects/editor/src/app/graph/editor/editor.component.scss
@@ -1,3 +1,16 @@
+:host {
+  display: block;
+  position: relative;
+  height: 100%;
+}
+
+.home {
+  position: absolute;
+  bottom: 16px;
+  left: 16px;
+  z-index: 1;
+}
+
 mat-sidenav-container {
   height: 100%;
 }
