setup editor for treegraph

--- a/projects/editor/src/app/home/home.component.html
+++ b/projects/editor/src/app/home/home.component.html
@@ -12,5 +12,6 @@
   </div>
   <div fxLayout fxLayoutAlign="center center" fxLayoutGap="24px">
     <a mat-button routerLink="graph">Graph Editor</a>
+    <!-- <a mat-button routerLink="tree">Tree Graph Editor</a> -->
   </div>
 </section>
