--- a/projects/editor/src/app/home/home.component.html
+++ b/projects/editor/src/app/home/home.component.html
@@ -1,17 +1,17 @@
-<mat-toolbar fxLayout fxLayoutAlign="space-between center">
+<mat-toolbar>
   <h2>Angular Antv - G6</h2>
 </mat-toolbar>
 
-<section fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="24px">
+<section>
   <h1 class="mat-display-2">Angular G6</h1>
   <p>Build graph with G6 and Angular</p>
-  <div fxLayout fxLayoutAlign="center center">
+  <div class="doc">
     <a class="mat-title" mat-flat-button color="primary" routerLink="doc">
       Getting Started
     </a>
   </div>
-  <div fxLayout fxLayoutAlign="center center" fxLayoutGap="24px">
+  <nav>
     <a mat-button routerLink="graph">Graph Editor</a>
     <!-- <a mat-button routerLink="tree">Tree Graph Editor</a> -->
-  </div>
+  </nav>
 </section>
