--- a/projects/editor/src/app/home/home.component.scss
+++ b/projects/editor/src/app/home/home.component.scss
@@ -1,7 +1,31 @@
+mat-toolbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 img {
   height: 80%;
 }
 
 section {
   height: calc(80% - 64px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.doc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
 }
