--- a/projects/demo/src/app/app.component.html
+++ b/projects/demo/src/app/app.component.html
@@ -1,5 +1,9 @@
-<g6-graph>
+<g6-graph layout="dagre">
   <g6-node id="0" label="root"></g6-node>
   <g6-node id="1" label="leaf"></g6-node>
+  <g6-node id="2" label="leaf"></g6-node>
+  <g6-node id="3" label="leaf"></g6-node>
   <g6-edge source="0" target="1"></g6-edge>
+  <g6-edge source="0" target="2"></g6-edge>
+  <g6-edge source="0" target="3"></g6-edge>
 </g6-graph>
