--- a/projects/demo/src/styles.scss
+++ b/projects/demo/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.g6-component-tooltip {
+  background-color: rgba(16, 11, 11, 0.8);
+  color: rgb(246, 190, 190);
+  padding: 0px 10px 24px 10px;
+  box-shadow: rgb(174, 174, 174) 0px 0px 10px;
+}
