--- a/projects/demo/src/app/app.component.scss
+++ b/projects/demo/src/app/app.component.scss
@@ -1,3 +1,21 @@
-g6-graph {
-  height: 100vh;
+:host {
+  display: block;
+  height: 100%;
+  padding: 16px;
+}
+
+main {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  gap: 16px;
+  g6-graph {
+    flex: 1;
+    border-radius: 4px;
+    border: 1px solid black;
+    overflow: hidden;
+  }
+  aside {
+    width: 250px;
+  }
 }
